// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-1szf201 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #e6e9f0;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-1szf201"
  >
    <span
      aria-disabled="false"
      class="cache-1a9zbjx e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .cache-p59kms {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.cache-1a9zbjx {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-p59kms"
  >
    <span
      aria-disabled="false"
      class="cache-1a9zbjx e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1bc28sm {
  opacity: 0.5;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #e6e9f0;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-gx7zy1 {
  opacity: 0.5;
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-1bc28sm"
  >
    <span
      aria-disabled="true"
      class="cache-gx7zy1 e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;
